# open_data_factory

./: ARCHITECTURE.md  DIRECRORY.md  Dockerfile  KUBERNETES.md  LICENSE  Makefile  README.md  main.py  pyproject.toml
notebooks/: integration.ipynb
src/app/: __init__.py  main_api.py  main_job.py  wiring.py
src/app/domain/: __init__.py
src/app/domain/model/: __init__.py  analysis_result.py
src/app/domain/service/: __init__.py  analyze_service.py
src/app/domain/value_object/: __init__.py  dataset.py  target_date.py
src/app/infrastructure/: __init__.py
src/app/infrastructure/config/: __init__.py  settings.py
src/app/infrastructure/k8s/: __init__.py  job_launcher.py
src/app/infrastructure/loader/: __init__.py  http_dataset_loader.py
src/app/infrastructure/repository/: __init__.py  s3_result_repository.py
src/app/interface/: __init__.py
src/app/interface/api/: __init__.py  analysis_controller.py
src/app/interface/job/: __init__.py  analysis_job_controller.py
src/app/interface/presenter/: __init__.py  analysis_presenter.py
src/app/usecase/: __init__.py
src/app/usecase/dto/: __init__.py  run_analysis_input.py  run_analysis_output.py
src/app/usecase/interactor/: __init__.py  run_analysis_interactor.py
src/app/usecase/ports/: __init__.py
src/app/usecase/ports/input/: __init__.py  run_analysis_usecase.py
src/app/usecase/ports/output/: __init__.py  dataset_loader.py  result_repository.py
tests/: __init__.py  test_example.py
